# exam_scheduler_api

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers_alter_customuser_email.py
accounts/tests/: factories.py  test_views.py
exam_scheduler_api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
examschedule/: apps.py  models.py  serializers.py  urls.py  views.py
examschedule/migrations/: 0001_initial.py  0002_examschedule_exam_name_and_more.py
examschedule/tests/: factories.py  test_views.py
reservation/: models.py  serializers.py  urls.py  views.py
reservation/migrations/: 0001_initial.py
reservation/tests/: factories.py  test_reservation_views.py
